--- a/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
@@ -23,6 +23,7 @@
 "Full name",,,
 "Landmark",,,
 "Name",,,
+"Please fill Registration Date and Event field","Veuillez remplir la date d'inscription et le champ de l'événement",,
 "Reference",,,
 "Registration Can't Exceed Capacity","L'inscription ne peut pas dépasser la capacité",,
 "Registration Close",,,
