--- a/modules/event-registration-module/src/main/resources/i18n/messages_en.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages_en.csv
@@ -23,6 +23,7 @@
 "Full name",,,
 "Landmark",,,
 "Name",,,
+"Please fill Registration Date and Event field",,,
 "Reference",,,
 "Registration Can't Exceed Capacity",,,
 "Registration Close",,,
