Change in Date Validaton and handle NPE. Remove static message from view

--- a/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
@@ -1,7 +1,4 @@
 "key","message","comment","context"
-"<span class='label label-warning'>Event start date must after Registration close date</span>",,,
-"<span class='label label-warning'>Registration Open must before Registration close.</span>",,,
-"<span class='label label-warning'>Start Date must before End Date.</span>",,,
 "Address",,,
 "Amount",,,
 "Amount Collected",,,
@@ -23,6 +20,7 @@
 "Full name",,,
 "Landmark",,,
 "Name",,,
+"Please fill Registration Date",,,
 "Please fill Registration Date and Event field","Veuillez remplir la date d'inscription et le champ de l'événement",,
 "Reference",,,
 "Registration Can't Exceed Capacity","L'inscription ne peut pas dépasser la capacité",,
@@ -30,8 +28,11 @@
 "Registration Date",,,
 "Registration Date Can not between Event Start Date and End Date","Date d'inscription ne peut pas entre la date de début de l'événement et la date de fin",,
 "Registration Open",,,
+"Registration Open should not be ahead of registration close","L'inscription ouverte ne devrait pas être en avance sur la clôture des inscriptions",,
+"Registration close date must be before event start date","La date de clôture des inscriptions doit être antérieure à la date de début de l'événement",,
 "Start Date",,,
 "Street",,,
 "Total Discount",,,
 "Total Entry",,,
 "Venue",,,
+"start date should not be ahead of endDate","date de début ne doit pas être en avance sur endDate",,
