--- a/modules/event-registration-module/src/main/resources/i18n/messages.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages.csv
@@ -16,6 +16,7 @@
 "Event Fees",,,
 "Event Registration",,,
 "EventRegistration",,,
+"Exceed duration between open and close registration dates",,,
 "Flat/House No.",,,
 "Full name",,,
 "Landmark",,,
@@ -26,7 +27,7 @@
 "Registration Can't Exceed Capacity",,,
 "Registration Close",,,
 "Registration Date",,,
-"Registration Date Can not between Event Start Date and End Date",,,
+"Registration Date Can not between Event registration open and registration close",,,
 "Registration Open",,,
 "Registration Open should not be ahead of registration close",,,
 "Registration close date must be before event start date",,,
