--- a/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
@@ -27,7 +27,7 @@
 "Registration Can't Exceed Capacity","L'inscription ne peut pas dépasser la capacité",,
 "Registration Close",,,
 "Registration Date",,,
-"Registration Date Can not between Event registration open and registration close","Date d'inscription Ne peut pas s'inscrire entre l'ouverture de l'événement et la clôture des inscriptions",,
+"Registration Date must between Event registration open and registration close","La date d’inscription doit être comprise entre l’inscription ouverte et la clôture des inscriptions.",,
 "Registration Open",,,
 "Registration Open should not be ahead of registration close","L'inscription ouverte ne devrait pas être en avance sur la clôture des inscriptions",,
 "Registration close date must be before event start date","La date de clôture des inscriptions doit être antérieure à la date de début de l'événement",,
