--- a/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
@@ -2,6 +2,7 @@
 "Address",,,
 "Amount",,,
 "Amount Collected",,,
+"Are you sure event is saved otherwise you get a blank report","Etes-vous sûr que l'événement est enregistré sinon vous obtenez un rapport vierge",,
 "Before Days",,,
 "Capacity",,,
 "City",,,
@@ -11,14 +12,20 @@
 "Discount Amount",,,
 "Discount Parcent",,,
 "Email",,,
+"Email Send",,,
 "End Date",,,
 "Event",,,
 "Event Fees",,,
 "Event Registration",,,
 "EventRegistration",,,
+"Events",,,
 "Exceed duration between open and close registration dates","Dépasser la durée entre les dates d'ouverture et de fermeture",,
 "Flat/House No.",,,
 "Full name",,,
+"Import",,,
+"Import Event Registration",,,
+"Import Registration",,,
+"Input file",,,
 "Landmark",,,
 "Name",,,
 "Please fill Registration Date",,,
@@ -30,8 +37,10 @@
 "Registration Date must between Event registration open and registration close","La date d’inscription doit être comprise entre l’inscription ouverte et la clôture des inscriptions.",,
 "Registration Open",,,
 "Registration Open should not be ahead of registration close","L'inscription ouverte ne devrait pas être en avance sur la clôture des inscriptions",,
-"Registration Open should not be ahead of start date","L'inscription ouverte ne devrait pas être en avance sur la date de début",,
-"Registration close date must be before event start date","La date de clôture des inscriptions doit être antérieure à la date de début de l'événement",,
+"Registration Open should not be ahead or equal to start date","Les inscriptions ouvertes ne doivent pas être en avance ou égales à la date de début",,
+"Registration close should not be ahead or equal to start date","La clôture des inscriptions ne doit pas être en avance ni égale à la date de début",,
+"Report",,,
+"Send Email",,,
 "Start Date",,,
 "Street",,,
 "Total Discount",,,
