--- a/modules/event-registration-module/src/main/resources/i18n/messages_en.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages_en.csv
@@ -2,6 +2,7 @@
 "Address",,,
 "Amount",,,
 "Amount Collected",,,
+"Are you sure event is saved otherwise you get a blank report",,,
 "Before Days",,,
 "Capacity",,,
 "City",,,
@@ -11,14 +12,20 @@
 "Discount Amount",,,
 "Discount Parcent",,,
 "Email",,,
+"Email Send",,,
 "End Date",,,
 "Event",,,
 "Event Fees",,,
 "Event Registration",,,
 "EventRegistration",,,
+"Events",,,
 "Exceed duration between open and close registration dates",,,
 "Flat/House No.",,,
 "Full name",,,
+"Import",,,
+"Import Event Registration",,,
+"Import Registration",,,
+"Input file",,,
 "Landmark",,,
 "Name",,,
 "Please fill Registration Date",,,
@@ -30,8 +37,10 @@
 "Registration Date must between Event registration open and registration close",,,
 "Registration Open",,,
 "Registration Open should not be ahead of registration close",,,
-"Registration Open should not be ahead of start date",,,
-"Registration close date must be before event start date",,,
+"Registration Open should not be ahead or equal to start date",,,
+"Registration close should not be ahead or equal to start date",,,
+"Report",,,
+"Send Email",,,
 "Start Date",,,
 "Street",,,
 "Total Discount",,,
