changes in report degisn and add translation for error message

--- a/modules/event-registration-module/src/main/resources/i18n/messages.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages.csv
@@ -7,12 +7,14 @@
 "Capacity",,,
 "City",,,
 "Country",,,
+"Data Imported",,,
 "Description",,,
 "Discount",,,
 "Discount Amount",,,
 "Discount Parcent",,,
 "Email",,,
 "Email Send",,,
+"Emails are sending",,,
 "End Date",,,
 "Event",,,
 "Event Fees",,,
@@ -28,6 +30,9 @@
 "Input file",,,
 "Landmark",,,
 "Name",,,
+"No recieptant found",,,
+"Please Select CSV file",,,
+"Please configure mail account for send mail",,,
 "Please fill Registration Date",,,
 "Please fill Registration Date and Event field",,,
 "Reference",,,
