--- a/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
+++ b/modules/event-registration-module/src/main/resources/i18n/messages_fr.csv
@@ -1,21 +1,23 @@
 "key","message","comment","context"
 "Address",,,
-"Amount",,,
-"Amount Collected",,,
+"Amount","Montante",,
+"Amount Collected","Montant perçu",,
 "Are you sure event is saved otherwise you get a blank report","Etes-vous sûr que l'événement est enregistré sinon vous obtenez un rapport vierge",,
 "Before Days",,,
-"Capacity",,,
+"Capacity","Capacité",,
 "City",,,
 "Country",,,
+"Data Imported","Données importées",,
 "Description",,,
 "Discount",,,
 "Discount Amount",,,
 "Discount Parcent",,,
-"Email",,,
+"Email","Email",,
 "Email Send",,,
-"End Date",,,
+"Emails are sending","Les courriels envoient",,
+"End Date","Date de fin",,
 "Event",,,
-"Event Fees",,,
+"Event Fees","Frais d'événement",,
 "Event Registration",,,
 "EventRegistration",,,
 "Events",,,
@@ -27,23 +29,26 @@
 "Import Registration",,,
 "Input file",,,
 "Landmark",,,
-"Name",,,
-"Please fill Registration Date",,,
+"Name","Nom",,
+"No recieptant found","Aucun receveur trouvé",,
+"Please Select CSV file","Veuillez sélectionner un fichier CSV",,
+"Please configure mail account for send mail","Veuillez configurer le compte mail pour envoyer un mail",,
+"Please fill Registration Date","S'il vous plaît remplir Date d'inscription",,
 "Please fill Registration Date and Event field","Veuillez remplir la date d'inscription et le champ de l'événement",,
-"Reference",,,
+"Reference","Référence",,
 "Registration Can't Exceed Capacity","L'inscription ne peut pas dépasser la capacité",,
-"Registration Close",,,
-"Registration Date",,,
+"Registration Close","Inscription Fermer",,
+"Registration Date","Date d'inscription",,
 "Registration Date must between Event registration open and registration close","La date d’inscription doit être comprise entre l’inscription ouverte et la clôture des inscriptions.",,
-"Registration Open",,,
+"Registration Open","Inscription ouverte",,
 "Registration Open should not be ahead of registration close","L'inscription ouverte ne devrait pas être en avance sur la clôture des inscriptions",,
 "Registration Open should not be ahead or equal to start date","Les inscriptions ouvertes ne doivent pas être en avance ou égales à la date de début",,
 "Registration close should not be ahead or equal to start date","La clôture des inscriptions ne doit pas être en avance ni égale à la date de début",,
 "Report",,,
 "Send Email",,,
-"Start Date",,,
+"Start Date","Date de début",,
 "Street",,,
-"Total Discount",,,
-"Total Entry",,,
+"Total Discount","Remise totale",,
+"Total Entry","Entrée totale",,
 "Venue",,,
 "start date should not be ahead of endDate","date de début ne doit pas être en avance sur endDate",,
